--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^16.8.23",
     "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-dom": "^16.8.4",
+    "@types/react-select": "^3.0.0",
     "@types/reactstrap": "^8.0.1",
     "bootstrap": "^4.3.1",
     "file-saver": "^2.0.2",
@@ -19,6 +20,7 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "react-select": "^3.0.4",
     "reactstrap": "^8.0.1",
     "save-file": "^2.3.1",
     "typescript": "^3.5.3"
