--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-bootstrap": "^1.0.0-beta.9",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.0.1",
     "react-select": "^3.0.4",
     "reactstrap": "^8.0.1",
     "save-file": "^2.3.1",
